# apex-portfolio-vercel

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  GEMINI.md  IMPLEMENTACION_IDEMPOTENCIA.md  investigacion_brevo_29262b82.md  middleware.ts  next.config.mjs  package-lock.json  package.json  remotion.config.ts  scratch-test-db.js  test-constraint.js
__tests__/: setup.ts
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
components/: AdminHeader.tsx  AgentStateVisualization.tsx  AppSidebar.tsx  BusinessSwitcher.tsx  CategorySelector.tsx  ChatHistory.tsx  ConfirmDeleteDialog.tsx  DataTable.tsx  DataTableViewOptions.tsx  EventBridgeMonitor.tsx  GenericImportExportButtons.tsx  IsoType.tsx  Logo.tsx  NavMain.tsx  NavigationLoader.tsx  SidebarCustomFooter.tsx  SidebarSync.tsx  SidebarUpgradePlan.tsx  SimpleExportButton.tsx  TagsSelector.tsx
const/: auth-errors.ts  auth.ts  roles.ts  route-access.ts  sidebar-menu.ts
docs/: LIMPIEZA_CODIGO.md  apex-collection.md  brevo_webhook_auth.md  click_tracking.md  collection-dyn-template-execution.md  collection_migration_fixes.md  collection_phase1_summary.md  collection_phase3_summary.md  collection_storage_setup.md  db-schemas.md  email-limits.md  (+19 more)
functions/aws/: .env-example  Cargo.toml  deploy.sh
functions/aws/collection-email-worker/: Cargo.toml
functions/aws/collection-email-worker/src/: control_tower.rs  distributed_lock.rs  email_provider.rs  factory.rs  main.rs  models.rs  ses.rs  supabase.rs
functions/aws/collection-email-worker/src/providers/: brevo_provider.rs  mod.rs  ses_provider.rs
functions/aws/collection-event-handler/: Cargo.toml
functions/aws/collection-event-handler/src/: event_parser.rs  main.rs  supabase.rs
(+703 files in other folders)
