[workspace]
resolver = "2"
members = [
    "collection-email-worker",
    "collection-event-handler"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lambda_runtime = "0.13"
aws-config = "1.5.0"
aws-sdk-ses = "1.49.0"
aws-sdk-sqs = "1.45.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
simple_logger = "5.0"
dotenvy = "0.15"
