[package]
name = "collection-email-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
lambda_runtime.workspace = true
aws-config.workspace = true
aws-sdk-ses.workspace = true
aws-sdk-sqs.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
log.workspace = true
simple_logger.workspace = true
dotenvy.workspace = true
handlebars = "5.0"
regex = "1.10"
rusty-money = "0.4.1"
css-inline = "0.10"
mail-builder = "0.4.4"
