[package]
name = "collection-event-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
lambda_runtime.workspace = true
aws-config.workspace = true
aws-sdk-sqs.workspace = true
chrono.workspace = true
log.workspace = true
simple_logger.workspace = true
reqwest.workspace = true
